# IndControl

./: CMakeLists.txt  CanOpenUI.cpp  CanOpenUI.h  CanOpenUI.ui  Conf.cpp  Conf.h  ControlMain.cpp  ControlMain.h  IndControl-win32.pro  IndControl-win64.pro  IndControl.pro  README.md  UIReadThread.cpp  UIReadThread.h  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui-2  msvc_make.bat  resource.qrc  ui_mainwindow.h
3rd/x64/emqtt/lib/: paho-mqtt3a.lib  paho-mqtt3as.lib  paho-mqtt3c.lib  paho-mqtt3cs.lib
3rd/x64/modbus/include/: modbus.h
3rd/x64/modbus/lib/: modbus.lib
3rd/x64/pgsql/include/server/: fmgr.h
3rd/x86/emqtt/lib/: paho-mqtt3a.lib  paho-mqtt3as.lib  paho-mqtt3c.lib  paho-mqtt3cs.lib
3rd/x86/modbus/include/: modbus-tcp.h
3rd/x86/pgsql/lib/: libpq.lib
doc/: C代码说明.docx  README.txt  WebSocketTest.html  测试手册.docx  说明.txt
res/: resource.qrc
src/: config.ini  main.cpp
src/component/: BDServer.cpp  BDServer.h  QTcpComponentl.cpp  QTcpComponentl.h  QTcpServer.h  WModbusTcp.cpp  WModbusTcp.h  WModbusTcpClient.cpp  WModbusTcpClient.h  WTcpClient.cpp  WTcpClient.h  WTcpServer.cpp  WTcpServer.h  WTcpSocket.cpp  WTcpSocket.h  WebSocket.cpp  WebSocket.h  WebSocketCommand.h  component.pri
src/conf/: ControlSetting.ini  config.ini
src/protocol/: CANopenNode.pro  ModBusTcp.cpp  ModBusTcp.h  ProtocolWebJson.cpp  ProtocolWebJson.h  ProtocolXly.cpp  ProtocolXly.h  SelfMovingtail.cpp  SelfMovingtail.h  modbustcp.pri  protocol.pri  protocol.pro
src/protocol/ControlCANx64/: ControlCANx64.pro
src/protocol/ControlCANx64/src/: ControCANx64.cpp  ControCANx64.h
src/protocol/modbustcp/: ModBusTcp.cpp  ModbusTcp.h  ModbusTcpClient.cpp  ModbusTcpClient.h  modbus.lib
src/protocol/zlgcan_x64/: zlgcan_x64.pri  zlgcan_x64.pro
src/protocol/zlgcan_x64/kerneldlls/devices_property/: canet-tcp.xml
src/protocol/zlgcan_x64/src/: CANzlg.cpp  CANzlg.h
src/qtview/: QTCamera.cpp  QTCamera.h  QTPanTilt.cpp  QTPanTilt.h  QTScreen.cpp  QTScreen.h  QTTray.cpp  QTTray.h  ScreenshotWidget.cpp  ScreenshotWidget.h  VideoWidget.cpp  VideoWidget.h  qtview.pri
src/util/: ConvertUtil.cpp  ConvertUtil.h  FormatTimes.cpp  FormatTimes.h  IOTUtil.cpp  IOTUtil.h  JSONUtil.cpp  JSONUtil.h  MQTTUtil.cpp  MQTTUtil.h  MyDownloader.cpp  MyDownloader.h  NetToolHelper.cpp  NetToolHelper.h  PGSQLDriveHelper.h  ShellProcess.cpp  ShellProcess.h  TcpClientUtil.cpp  TcpClientUtil.h  UTypes.h  UWLog.cpp  UWLog.h  WTcpSocket.cpp  pgsqldrivehelper.cpp  utils.pri
src/wsserver/: BDServer.cpp  BDServer.h  Command.h  CommandProtocol.cpp  CommandProtocol.h  CommandSDK.cpp  CommandSDK.h  wsserver.pri
uimain/: CanOpenUI.cpp  CanOpenUI.h  CanOpenUI.ui  Conf.cpp  Conf.h  ControlMain.cpp  ControlMain.h  OpenGLForm.cpp  OpenGLForm.h  OpenGLForm.ui  main.cpp  ui_CanOpenUI.h
